--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.33",
     "@types/cors": "^2.8.10",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.32",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
@@ -23,13 +27,22 @@
     "nodemon": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
+    "type-graphql": "^1.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "apollo-server-express": "^2.21.1",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
     "http-status-codes": "^2.1.4",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
   }
