--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "es2018",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
@@ -10,6 +10,7 @@
     "outDir": "dist"
   },
   "lib": [
-    "es2015"
+    "es2018",
+    "esnext.asynciterable"
   ],
 }
