--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.21.0",
     "nodemon": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "sequelize-cli": "^6.2.0",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1",
     "typescript": "^4.2.3"
