--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-validator": "^6.10.0",
+    "express-winston": "^4.1.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
     "http-status-codes": "^2.1.4",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "winston": "^3.3.3"
   }
 }
