--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon",
     "build": "npm run lint && tsc",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Sahan Diasena",
   "license": "ISC",
@@ -18,15 +18,21 @@
     "@types/express": "^4.17.11",
     "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^26.0.21",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.32",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.3",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.21.0",
+    "eslint-plugin-typescript": "^0.14.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.2.0",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1",
     "typescript": "^4.2.3"
